--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-helmet": "^5.1.3",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "url-loader": "^0.6.2"
   },
   "devDependencies": {
