--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "me",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
     "file-loader": "^1.1.5",
     "history": "^4.6.3",
     "jquery": "^3.2.1",
@@ -19,13 +21,14 @@
     "react-dom": "^16.0.0",
     "react-favicon": "0.0.11",
     "react-helmet": "^5.1.3",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "url-loader": "^0.6.2"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.6",
+    "autoprefixer": "^7.2.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.1",
@@ -51,7 +54,7 @@
     "run-sequence": "^2.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
-    "webpack": "^3.4.1",
+    "webpack": "^3.9.1",
     "webpack-dev-server": "^2.6.1",
     "webpack-stream": "^4.0.0"
   }
